[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "0.11.8", features = ["blocking"] }