[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
regex = "1.4.2"
itertools = "0.10.3"
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "0.11.8", features = ["blocking"] }
serde_json = "1.0"
once_cell = "1.19.0"
rand = "0.8.5"
num = "0.4.2"
colored = "2.2.0"
